[gd_scene load_steps=18 format=3 uid="uid://cyew2e48g5j0s"]

[ext_resource type="Script" path="res://assets/scripts/frog.gd" id="1_5rfui"]
[ext_resource type="Texture2D" uid="uid://sv42akk6ybku" path="res://assets/sprites/frog.png" id="2_y142g"]
[ext_resource type="AudioStream" uid="uid://0wgspf76c12d" path="res://assets/audio/jump.wav" id="3_ik6pw"]

[sub_resource type="Animation" id="Animation_c86k3"]
resource_name = "fall"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y142g")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 8, 7, 6]
}

[sub_resource type="Animation" id="Animation_ntxgi"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y142g")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_01j1m"]
resource_name = "jump"
length = 0.625
step = 0.0025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y142g")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1375, 0.15, 0.175, 0.1875, 0.5325, 0.5375, 0.5425, 0.57),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 7, 5, 4, 3]
}

[sub_resource type="Animation" id="Animation_ach3e"]
resource_name = "land"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y142g")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 4, 3, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjp0k"]
_data = {
"fall": SubResource("Animation_c86k3"),
"idle": SubResource("Animation_ntxgi"),
"jump": SubResource("Animation_01j1m"),
"land": SubResource("Animation_ach3e")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f5drf"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_whbk8"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yroxo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h3j1a"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rprr1"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_i53ia"]
states/idle/node = SubResource("AnimationNodeAnimation_f5drf")
states/idle/position = Vector2(325, 100)
states/jump/node = SubResource("AnimationNodeAnimation_whbk8")
states/jump/position = Vector2(447, 31)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_yroxo"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_h3j1a"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_rprr1")]

[sub_resource type="CircleShape2D" id="CircleShape2D_nw4vd"]
radius = 10.5119

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njbv1"]
size = Vector2(35.5, 33.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_el5ud"]
radius = 14.0

[node name="Frog" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_5rfui")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_y142g")
hframes = 10
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jjp0k")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_i53ia")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2.5)
shape = SubResource("CircleShape2D_nw4vd")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 1.8
autostart = true

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.25, 0.25)
shape = SubResource("RectangleShape2D_njbv1")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 1.5)
shape = SubResource("CircleShape2D_el5ud")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ik6pw")
volume_db = 5.0
pitch_scale = 0.35
max_distance = 500.0
